--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,40 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+#amplify-do-not-edit-begin
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/logs
+amplify/mock-data
+amplify/mock-api-resources
+amplify/backend/amplify-meta.json
+amplify/backend/.temp
+build/
+dist/
+node_modules/
+aws-exports.js
+awsconfiguration.json
+amplifyconfiguration.json
+amplifyconfiguration.dart
+amplify-build-config.json
+amplify-gradle-config.json
+amplifytools.xcconfig
+.secret-*
+**.sample
+#amplify-do-not-edit-end
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Build artifacts
+*.zip
+temp.zip
+cofish.zip
+amplify.zip
+
+# Documentation (optional - you can remove these if you want to keep them)
+# SETUP_HTTPS.md
+# NETLIFY_DEPLOY.md
