Add countdown timer to recording button showing remaining seconds

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,9 @@ amplifytools.xcconfig
 **.sample
 #amplify-do-not-edit-end
 
+# Amplify team provider info (contains sensitive API keys)
+amplify/team-provider-info.json
+
 # Environment variables
 .env
 .env.local
